--- a/index.html
+++ b/index.html
@@ -203,8 +203,31 @@
         </div>
         </div>
       </section>
-      
-      <div class="company">
+      </div>
+      <section class="services">
+        <div class="container">
+          <h2 class="services-headline">Сервисы</h2>
+          <p class="services-description">
+              Хороший интернет-магазин отличается от плохого не только ценами!
+              Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+          </p>
+          <div class="services-slider">
+          <div class="services-control"></div>
+          <ul class="services-list">
+            <li class="services-item">
+              <h3>Доставка</h3>
+              <p>
+                Мы с удовольствием доставим ваш товар прямо 
+                к вашему подъезду совершенно бесплатно!
+                Ведь мы неплохо заработаем, 
+                поднимая его на ваш этаж!
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      </section>
+      <div class="container company">
         <section class="company-description">
           <h2>Компания &laquo;Техномарт&raquo;</h2>
           <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
@@ -226,7 +249,6 @@
           <a class="button button-map" href="#">Заблудились? Напишите нам!</a>
         </section>
       </div>
-    </div>
   </main>
   <footer class="footer">
     <div class="footer-top">
