Сделал блок "О перефораторах"

--- a/catalog.html
+++ b/catalog.html
@@ -130,6 +130,14 @@
         </section>
         <section class="catalog">
           <h2 class="visually-hidden">Список Перфораторов</h2>
+          <div class="sorting">
+            <p class="sorting-headline">Сортировка:</p>
+            <a href="#" class="sorting-name sorting-name-price">По цене</a>
+            <a href="#" class="sorting-name sorting-name-type">По типу</a>
+            <a href="#" class="sorting-name sorting-name-function">По функционалу</a>
+            <a href="#" class="sorting-up"></a>
+            <a href="#" class="sorting-down"></a>
+          </div>
           <ul class="catolog-list">
             <li class="catolog-item">
               <a href="#">
@@ -255,6 +263,16 @@
         </section>
       </div>
     </div>
+    <section class="about-reformers">
+      <div class="container">
+        <h2 class="about-reformers-headline">Пара слов о перефораторах</h2>
+        <p class="about-reformers-description">
+          Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br> 
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В 
+          ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+        </p>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="footer-top">
