Сделал ссылками иконки меню пользователя
Сделал ссылками
Добавил ховеры

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,9 @@
           <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
         </div>
         <div class="user">
-          <p class="user-name">Равшан Джамшутович</p>
+          <a href="#" class="user-icon user-icon-men"></a>
+          <a href="#" class="user-name">Равшан Джамшутович</a>
+          <a href="#" class="user-icon user-icon-logout"></a>
           <ul class="user-menu">
             <li><a href="#">Мои заказы</a></li>
             <li><a href="#">Личный кабинет</a></li>
