Добавил кнопки переключения в слайдер

--- a/index.html
+++ b/index.html
@@ -67,8 +67,16 @@
             <a href="#" class="button promo-item-button">На все случаи</a>
           </div>
           <div class="promo-item slider">
-              <div class="slider-controls">
-              </div>
+              <ul class="slider-controls">
+                <li>
+                  <input type="radio" class="visually-hidden slider-input slider-input-1" name="promo-slider" value="none" id="slide-1" checked>
+                  <label for="slide-1"></label>
+                </li>
+                <li>
+                  <input type="radio" class="visually-hidden slider-input slider-input-2" name="promo-slider" value="none" id="slide-2">
+                  <label for="slide-2"></label>
+                </li>
+              </ul>
               <ul class="slider-list">
                 <li class="slider-item">
                   <h3>Дрели</h3>
@@ -81,6 +89,8 @@
                   <a href="catalog.html" class="button slider-button">Открыть каталог</a>
                 </li>
               </ul>
+              <button class="switch-button switch-button-left"></button>
+              <button class="switch-button switch-button-right"></button>
           </div>
         </div>
         <div class="promo-column">
