ПП для главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -149,7 +149,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
               <p class="discount-price">15500 р.</p>
             </li>
@@ -161,7 +161,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
               <p class="discount-price">25500 р.</p>
             </li>
@@ -175,7 +175,7 @@
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <div class="without-price">
-                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 2000</span></a></h3>
                 <p class="discount-price">12500 р.</p>
               </div>
             </li>
@@ -187,7 +187,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
               <p class="discount-price">15500 р.</p>
             </li>
@@ -200,7 +200,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
               <p class="discount-price">25500 р.</p>
             </li>
@@ -213,7 +213,7 @@
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <div class="without-price">
-                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 2000</span></a></h3>
                 <p class="discount-price">12500 р.</p>
               </div>
             </li>
@@ -226,7 +226,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
               <p class="discount-price">15500 р.</p>
             </li>
@@ -238,7 +238,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
               <p class="discount-price">25500 р.</p>
             </li>
@@ -251,7 +251,7 @@
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <div class="without-price">
-                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 2000</span></a></h3>
                 <p class="discount-price">12500 р.</p>
               </div>
             </li>
