--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                   <a class="button-green-bookmark" href="#">В закладки</a>
                 </p>
-                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
+                <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 9000</span></a></h3>
                 <p class="price">32500 р.</p>
                 <p class="discount-price">25500 р.</p>
               </li>
@@ -134,7 +134,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 3000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 3000</span></a></h3>
               <p class="price">22500 р.</p>
               <p class="discount-price">15500 р.</p>
             </li>
@@ -146,7 +146,7 @@
                 <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
-              <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 6000</span></a></h3>
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 6000</span></a></h3>
               <p class="price">30500 р.</p>
               <p class="discount-price">25500 р.</p>
             </li>
@@ -160,7 +160,7 @@
                 <a class="button-green-bookmark" href="#">В закладки</a>
               </p>
               <div class="without-price">
-                <h3><a class="card-name" href="#">Перфоратор Bosch<span class="item-model">BFG 2000</span></a></h3>
+                <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 2000</span></a></h3>
                 <p class="discount-price">12500 р.</p>
               </div>
             </li>
@@ -172,7 +172,6 @@
           <a href="#" class="button section-headline-button">Все производители</a>
         </div>
         <div class="manufacture-items">
-        
           <a href="#" class="manufacture-item">
             <img src="./img/manufacturers-bosch.jpg" alt="bosch" width="126" height="37">
           </a>
@@ -298,7 +297,7 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-bottom-copy">
-          <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
+          <p>&copy; 2010-2019 Компания &laquo;Техномарт&raquo; <br>
             Все права защищены</p>
         </div>
         <div class="footer-bottom-social">
