ПП проекта готов

--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
     </div>
     <div class="container">
       <div class="header-middle">
-        <p class="headline">Интернет-магазин строительных материалов и&nbsp;инструментов для дома</p>
+        <p class="headline">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
         <div class="contacts">
           <p class="contacts-phone"> +7 (812) 555-05-55</p>
           <p class="contacts-address">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8</p>
@@ -115,7 +115,7 @@
               </ul>
             </fieldset>
             <fieldset>
-              <legend>Питание</legend>
+              <legend>Питание:</legend>
               <ul>
                 <li class="filter-option">
                   <input class="visually-hidden filter-input filter-input-radio" type="radio" name="supply" value="battery" id="filter-battery" checked>
@@ -306,7 +306,7 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="footer-bottom-copy">
-          <p>&copy; 2010-2017 Компания &laquo;Техномарт&raquo; <br>
+          <p>&copy; 2010-2019 Компания &laquo;Техномарт&raquo; <br>
             Все права защищены</p>
         </div>
         <div class="footer-bottom-social">
