--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         </a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <input class="search-input" type="search" placeholder="Поиск:">
-          <label class="search-submit">
-            <input type="submit" class="submit-indicator">
-          </label>
+          <input type="submit" class="submit-indicator">
         </form>
         <a class="bookmarks" href="#">Закладки: 0</a>
         <a class="basket" href="#">Корзина: 0</a>
@@ -31,7 +29,7 @@
     <div class="container">
       <div class="header-middle">
         <p class="headline">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</p>
-        <div class="contacts">
+        <div class="contacts contacts-main">
           <p class="contacts-phone"> +7 (812) 555-05-55</p>
           <p class="contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
