Внес правки валидатора

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header-top">
       <div class="container">
         <a class="logo" href="#">
-          <img width="110px" height="18px" src="./img/logo.svg" alt="Логотип Техномарт">
+          <img width="110" height="18" src="./img/logo.svg" alt="Логотип Техномарт">
         </a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <input class="search-input" type="search" placeholder="Поиск:">
@@ -260,7 +260,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товары сами, <br>
             заехав в наш офис:</p>
-          <img src="./img/5.jpg" width="300px" height="160px" alt="Адрес на карте">
+          <img src="./img/5.jpg" width="300" height="160" alt="Адрес на карте">
           <a class="button button-map" href="#">Заблудились? Напишите нам!</a>
         </section>
       </div>
@@ -270,7 +270,7 @@
       <div class="container">
         <div class="footer-top-adress">
           <a class="logo" href="#">
-            <img width="138px" height="23px" src="./img/logo.svg" alt="Логотип Техномарт">
+            <img width="138" height="23" src="./img/logo.svg" alt="Логотип Техномарт">
           </a>
           <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
             +7 (812) 555-05-55</p>
