--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
     <div class="header-top">
       <div class="container">
         <a class="logo" href="index.html">
-          <img src="./img/logo.svg" width="111px" height="18px" alt="Логотип Техномарт">
+          <img src="./img/logo.svg" width="111" height="18" alt="Логотип Техномарт">
         </a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
           <label class="search-submit">
@@ -281,7 +281,7 @@
       <div class="container">
         <div class="footer-top-adress">
           <a class="logo" href="#">
-            <img width="138px" height="23px" src="./img/logo.svg" alt="Логотип Техномарт">
+            <img width="138" height="23" src="./img/logo.svg" alt="Логотип Техномарт">
           </a>
           <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
             +7 (812) 555-05-55</p>
