Правки после теста сайта

--- a/catalog.html
+++ b/catalog.html
@@ -18,11 +18,8 @@
           <img src="./img/logo.svg" width="111" height="18" alt="Логотип Техномарт">
         </a>
         <form class="search" action="https://echo.htmlacademy.ru" method="get">
-          <label class="search-submit">
-            <input type="submit" class="visually-hidden">
-            <span class="submit-indicator"></span>
-          </label>
           <input class="search-input" type="search" placeholder="Поиск:">
+          <input type="submit" class="submit-indicator">
         </form>
         <a class="bookmarks" href="#">Закладки: 0</a>
         <a class="basket basket-active" href="#">Корзина: 0</a>
