--- a/catalog.html
+++ b/catalog.html
@@ -278,7 +278,7 @@
       <div class="container">
         <div class="footer-top-adress">
           <a class="logo" href="#">
-            <img width="138" height="23" src="./img/logo.svg" alt="Логотип Техномарт">
+            <img width="138" height="23" src="./img/logo-footer.svg" alt="Логотип Техномарт">
           </a>
           <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
             +7 (812) 555-05-55</p>
