--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <h2>Популярные товары:</h2>
           <a href="#" class="button section-headline-button">Все популярные товары</a>
         </div>
-        <ul class="catolog-list">
+        <ul class="catolog-list catolog-list-main">
             <li class="catolog-item">
                 <a href="#">
                   <img src="./img/bosch9000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 9000">
@@ -272,7 +272,7 @@
       <div class="container">
         <div class="footer-top-adress">
           <a class="logo" href="#">
-            <img width="138" height="23" src="./img/logo.svg" alt="Логотип Техномарт">
+            <img width="138" height="23" src="./img/logo-footer.svg" alt="Логотип Техномарт">
           </a>
           <p class="footer-contacts">г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8 <br>
             +7 (812) 555-05-55</p>
