--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i&amp;subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -65,36 +65,38 @@
             <a href="#" class="button promo-item-button">На все случаи</a>
           </div>
           <div class="promo-item slider">
-              <ul class="slider-controls">
-                <li>
-                  <input type="radio" class="visually-hidden slider-input slider-input-1" name="promo-slider" value="none" id="slide-1" checked>
-                  <label for="slide-1"></label>
-                </li>
-                <li>
-                  <input type="radio" class="visually-hidden slider-input slider-input-2" name="promo-slider" value="none" id="slide-2">
-                  <label for="slide-2"></label>
-                </li>
-              </ul>
-              <ul class="slider-list">
-                <li class="slider-item">
-                  <h3>Дрели</h3>
-                  <p>Соседям на радость!</p>
-                  <a href="catalog.html" class="button slider-button">Открыть каталог</a>
-                </li>
-                <li class="slider-item">
-                  <h3>Перфораторы</h3>
-                  <p>Настоящие мужские игрушки</p>
-                  <a href="catalog.html" class="button slider-button">Открыть каталог</a>
-                </li>
-              </ul>
-              <button class="switch-button switch-button-left"></button>
-              <button class="switch-button switch-button-right"></button>
+            <ul class="slider-controls">
+              <li>
+                <input type="radio" class="visually-hidden slider-input slider-input-1" name="promo-slider" value="none"
+                  id="slide-1">
+                <label for="slide-1"></label>
+              </li>
+              <li>
+                <input type="radio" class="visually-hidden slider-input slider-input-2" name="promo-slider" value="none"
+                  id="slide-2" checked>
+                <label for="slide-2"></label>
+              </li>
+            </ul>
+            <ul class="slider-list">
+              <li class="slider-item">
+                <h3>Дрели</h3>
+                <p>Соседям на радость!</p>
+                <a href="catalog.html" class="button slider-button">Открыть каталог</a>
+              </li>
+              <li class="slider-item">
+                <h3>Перфораторы</h3>
+                <p>Настоящие мужские игрушки</p>
+                <a href="catalog.html" class="button slider-button">Открыть каталог</a>
+              </li>
+            </ul>
+            <button class="switch-button switch-button-left"></button>
+            <button class="switch-button switch-button-right"></button>
           </div>
         </div>
         <div class="promo-column">
           <div class="promo-item promo-item-equipment">
-           <p>Техника</p>
-           <a href="#" class="button promo-item-button">Для стройки</a>
+            <p>Техника</p>
+            <a href="#" class="button promo-item-button">Для стройки</a>
           </div>
           <div class="promo-item promo-item-sale">
             <p>Скидка 50%</p>
@@ -112,57 +114,57 @@
           <a href="#" class="button section-headline-button">Все популярные товары</a>
         </div>
         <ul class="catolog-list catolog-list-main">
-            <li class="catolog-item">
-                <a href="#">
-                  <img src="./img/bosch9000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 9000">
-                </a>
-                <p class="catolog-item-button">
-                  <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
-                  <a class="button-green-bookmark" href="#">В закладки</a>
-                </p>
-                <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 9000</span></a></h3>
-                <p class="price">32500 р.</p>
-                <p class="discount-price">25500 р.</p>
-              </li>
-            <li class="catolog-item">
-              <a href="#">
-                <img src="./img/bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
-              </a>
-              <p class="catolog-item-button">
-                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
-                <a class="button-green-bookmark" href="#">В закладки</a>
-              </p>
-              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 3000</span></a></h3>
-              <p class="price">22500 р.</p>
-              <p class="discount-price">15500 р.</p>
-            </li>
-            <li class="catolog-item">
-              <a href="#">
-                <img src="./img/bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
-              </a>
-              <p class="catolog-item-button">
-                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
-                <a class="button-green-bookmark" href="#">В закладки</a>
-              </p>
-              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 6000</span></a></h3>
-              <p class="price">30500 р.</p>
-              <p class="discount-price">25500 р.</p>
-            </li>
-            <li class="catolog-item">
-              <a href="#">
-                <img src="./img/bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
-              </a>
-              <div class="strip">новинка</div>
-              <p class="catolog-item-button">
-                <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
-                <a class="button-green-bookmark" href="#">В закладки</a>
-              </p>
-              <div class="without-price">
-                <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 2000</span></a></h3>
-                <p class="discount-price">12500 р.</p>
-              </div>
-            </li>
-          </ul>     
+          <li class="catolog-item">
+            <a href="#">
+              <img src="./img/bosch9000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 9000">
+            </a>
+            <p class="catolog-item-button">
+              <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+              <a class="button-green-bookmark" href="#">В закладки</a>
+            </p>
+            <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 9000</span></a></h3>
+            <p class="price">32500 р.</p>
+            <p class="discount-price">25500 р.</p>
+          </li>
+          <li class="catolog-item">
+            <a href="#">
+              <img src="./img/bosch3000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 3000">
+            </a>
+            <p class="catolog-item-button">
+              <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+              <a class="button-green-bookmark" href="#">В закладки</a>
+            </p>
+            <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 3000</span></a></h3>
+            <p class="price">22500 р.</p>
+            <p class="discount-price">15500 р.</p>
+          </li>
+          <li class="catolog-item">
+            <a href="#">
+              <img src="./img/bosch6000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 6000">
+            </a>
+            <p class="catolog-item-button">
+              <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+              <a class="button-green-bookmark" href="#">В закладки</a>
+            </p>
+            <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 6000</span></a></h3>
+            <p class="price">30500 р.</p>
+            <p class="discount-price">25500 р.</p>
+          </li>
+          <li class="catolog-item">
+            <a href="#">
+              <img src="./img/bosch2000.jpg" width="218" height="170" alt="Перфоратор Bosch BFG 2000">
+            </a>
+            <div class="strip">новинка</div>
+            <p class="catolog-item-button">
+              <a class="button-green-buy" href="#"><span class="catolog-item-basket"></span>Купить</a>
+              <a class="button-green-bookmark" href="#">В закладки</a>
+            </p>
+            <div class="without-price">
+              <h3><a class="card-name" href="#">Перфоратор BOSCH<span class="item-model">BFG 2000</span></a></h3>
+              <p class="discount-price">12500 р.</p>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="manufacturers">
         <div class="section-headline">
@@ -176,35 +178,35 @@
           <a href="#" class="manufacture-item">
             <img src="./img/manufacturers-makita.jpg" alt="bosch" width="123" height="40">
           </a>
-            <a href="#" class="manufacture-item">
-              <img src="./img/manufacturers-de-walt.jpg" alt="bosch" width="146" height="44">
-            </a>
-            <a href="#" class="manufacture-item">
-              <img src="./img/manufacturers-invalid-name.jpg" alt="bosch" width="200" height="88">
-            </a>
-            <a href="#" class="manufacture-item">
-              <img src="./img/manufacturers-hitachi.jpg" alt="bosch" width="169" height="31">
-            </a>
-            <a href="#" class="manufacture-item">
-              <img src="./img/manufacturers-lg.jpg" alt="bosch" width="121" height="73">
-            </a>
-            <a href="#" class="manufacture-item">
-              <img src="./img/manufacturers-aeg.jpg" alt="bosch" width="151" height="96">
-            </a>
-            <a href="#" class="manufacture-item">
-              <img src="./img/manufacturers-metabo.jpg" alt="bosch" width="204" height="69">
-            </a>
+          <a href="#" class="manufacture-item">
+            <img src="./img/manufacturers-de-walt.jpg" alt="bosch" width="146" height="44">
+          </a>
+          <a href="#" class="manufacture-item">
+            <img src="./img/manufacturers-invalid-name.jpg" alt="bosch" width="200" height="88">
+          </a>
+          <a href="#" class="manufacture-item">
+            <img src="./img/manufacturers-hitachi.jpg" alt="bosch" width="169" height="31">
+          </a>
+          <a href="#" class="manufacture-item">
+            <img src="./img/manufacturers-lg.jpg" alt="bosch" width="121" height="73">
+          </a>
+          <a href="#" class="manufacture-item">
+            <img src="./img/manufacturers-aeg.jpg" alt="bosch" width="151" height="96">
+          </a>
+          <a href="#" class="manufacture-item">
+            <img src="./img/manufacturers-metabo.jpg" alt="bosch" width="204" height="69">
+          </a>
         </div>
       </section>
-      </div>
-      <section class="services">
-        <div class="container">
-          <h2 class="services-headline">Сервисы</h2>
-          <p class="services-description">
-              Хороший интернет-магазин отличается от плохого не только ценами!
-              Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
-          </p>
-          <div class="services-slider">
+    </div>
+    <section class="services">
+      <div class="container">
+        <h2 class="services-headline">Сервисы</h2>
+        <p class="services-description">
+          Хороший интернет-магазин отличается от плохого не только ценами!
+          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+        </p>
+        <div class="services-slider">
           <div class="services-control">
             <div class="services-boxshadow"></div>
             <div class="services-control-item services-control-delivery">Доставка</div>
@@ -224,10 +226,10 @@
             <li class="services-item">
               <h3>Гарантия</h3>
               <p>
-                Если купленный у нас товар поломается или заискрит,<br> 
-                а также в случае пожара, спровоцированного его возгаранием,<br> 
-                вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br> 
-                сгоревший товар на новый.<br> 
+                Если купленный у нас товар поломается или заискрит,<br>
+                а также в случае пожара, спровоцированного его возгаранием,<br>
+                вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>
+                сгоревший товар на новый.<br>
                 Дом уж восстановите как-нибудь сами.
               </p>
             </li>
@@ -237,35 +239,35 @@
                 Залезть в долговую яму стало проще!<br>
                 Кредитные консультанты придут вам на помощь.
               </p>
-            </li>  
+            </li>
           </ul>
         </div>
       </div>
+    </section>
+    <div class="container company">
+      <section class="company-description">
+        <h2>Компания &laquo;Техномарт&raquo;</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+          строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>
+          Техномарт работает со многими транспортными компнаиями:</p>
+        <ul class="company-transport">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a class="button button-transport" href="#">Подробнее о компании</a>
       </section>
-      <div class="container company">
-        <section class="company-description">
-          <h2>Компания &laquo;Техномарт&raquo;</h2>
-          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
-            строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-          <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>
-            Техномарт работает со многими транспортными компнаиями:</p>
-          <ul class="company-transport">
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
-          </ul>
-          <a class="button button-transport" href="#">Подробнее о компании</a>
-        </section>
-        <section class="company-address">
-          <h2>Контакты</h2>
-          <p>Вы можете забрать товары сами, <br>
-            заехав в наш офис:</p>
-          <a class="company-address-map" href="https://www.google.com/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.,+19,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.9387969,30.3208946,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833?hl=ru-RU">  
+      <section class="company-address">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товары сами, <br>
+          заехав в наш офис:</p>
+        <a class="company-address-map" href="https://www.google.com/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.,+19,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.9387969,30.3208946,17z/data=!3m1!4b1!4m5!3m4!1s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833?hl=ru-RU">
           <img src="./img/5.jpg" width="300" height="160" alt="Адрес на карте">
-          </a>    
-          <a class="button button-map" href="#">Заблудились? Напишите нам!</a>
-        </section>
-      </div>
+        </a>
+        <a class="button button-map" href="#">Заблудились? Напишите нам!</a>
+      </section>
+    </div>
   </main>
   <footer class="footer">
     <div class="footer-top">
@@ -317,30 +319,28 @@
   <!--Pop-up формы обратной связи-->
   <section class="modal modal-letter">
     <h2 class="visually-hidden">Форма написания письма</h2>
-      
-      <div class="modal-top-letter">
-          <div class="container-modal">
-       <form class="letter-form" action="https://echo.htmlacademy.ru" method="POST">
-        <p class="letter-form-item">
-          <label for="modal-name">Ваше имя:</label>
-          <input type="text" name="name" placeholder="Имя Фамилия" value="" id="modal-name">
-        </p>
+    <div class="modal-top-letter">
+      <div class="container-modal">
+        <form class="letter-form" action="https://echo.htmlacademy.ru" method="POST">
           <p class="letter-form-item">
-          <label for="modal-email">Ваше имя:</label>
-          <input type="text" name="email" placeholder="email@example.com" value="" id="modal-email">
-        </p>
+            <label for="modal-name">Ваше имя:</label>
+            <input type="text" name="name" placeholder="Имя Фамилия" value="" id="modal-name">
+          </p>
+          <p class="letter-form-item">
+            <label for="modal-email">Ваше имя:</label>
+            <input type="text" name="email" placeholder="email@example.com" value="" id="modal-email">
+          </p>
           <p class="letter-form-item">
             <label for="modal-text">Текст письма:</label>
             <textarea name="text" id="modal-text" cols="30" rows="10" placeholder="В свободной форме"></textarea>
           </p>
         </form>
-       <button class="button modal-close" type="button">Закрыть</button>
+        <button class="button modal-close" type="button">Закрыть</button>
       </div>
-      </div>
-      <p class="modal-bottom">
-        <button class="button button-map">Отправить</button>
-      </p>
-    
+    </div>
+    <p class="modal-bottom">
+      <button class="button button-map">Отправить</button>
+    </p>
   </section>
 </body>
 
